tests/compile/userdata_setter_no_value.stderr
error: field setter must take exactly one value argument
 --> tests/compile/userdata_setter_no_value.rs:9:5
  |
9 |     fn set_x(&mut self) -> mlua::Result<()> {
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
